// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds thread views blocks ancestors by actor takedown 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(5)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread views blocks ancestors by record takedown 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(5)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread views blocks replies by actor takedown 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(4)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(4)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(2)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(3)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(1)",
                  "uri": "record(4)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "uri": "record(5)",
            "viewer": Object {
              "repost": "record(6)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views blocks replies by record takedown 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(4)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(1)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(4)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(2)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
  ],
}
`;

exports[`pds thread views fetches ancestors 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "parent": Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [],
          "viewer": Object {
            "followedBy": "record(2)",
            "following": "record(1)",
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 3,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "uri": "record(3)",
        "viewer": Object {
          "like": "record(6)",
        },
      },
      "replies": Array [],
    },
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "labels": Array [],
        "viewer": Object {
          "muted": false,
        },
      },
      "cid": "cids(2)",
      "embed": Object {
        "$type": "app.bsky.embed.images#view",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "record(4)",
          "val": "test-label",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "neg": false,
          "src": "did:example:labeler",
          "uri": "record(4)",
          "val": "test-label-2",
        },
      ],
      "likeCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(3)",
                },
                "size": 4114,
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(1)",
            "uri": "record(3)",
          },
          "root": Object {
            "cid": "cids(1)",
            "uri": "record(3)",
          },
        },
        "text": "hear that label_me label_me_2",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(3)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "repost": "record(5)",
    },
  },
  "replies": Array [],
}
`;

exports[`pds thread views fetches deep post thread 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "did": "user(1)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(3)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(4)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(2)",
                  "uri": "record(6)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "uri": "record(7)",
            "viewer": Object {
              "repost": "record(8)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views fetches shallow post thread 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "did": "user(1)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(3)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
    },
  ],
}
`;

exports[`pds thread views handles deleted posts correctly 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 1,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(1)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "Reply",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": false,
              },
            },
            "cid": "cids(2)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(1)",
                  "uri": "record(3)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "Reply reply",
            },
            "replyCount": 0,
            "repostCount": 0,
            "uri": "record(4)",
            "viewer": Object {},
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;

exports[`pds thread views handles deleted posts correctly 2`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "Deletion thread",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [],
}
`;

exports[`pds thread views handles deleted posts correctly 3`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "parent": Object {
    "$type": "app.bsky.feed.defs#notFoundPost",
    "notFound": true,
    "uri": "record(4)",
  },
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(3)",
        },
      },
      "text": "Reply reply",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {},
  },
  "replies": Array [],
}
`;

exports[`pds thread views includes the muted status of post authors. 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": true,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "like": "record(3)",
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "did": "user(1)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "following": "record(5)",
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "replies": Array [],
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "did": "user(2)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/AiDXkxVbgBksxb1nfiRn1m6S4K8_mee6o8r-UGLNzOM/rs:fit:2000:2000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/uc7FGfiGv0mMqmk9XiqHXrIhNymLHaex7Ge8nEhmXqo/rs:fit:1000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "neg": false,
            "src": "did:example:labeler",
            "uri": "record(6)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(3)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {},
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.defs#threadViewPost",
          "post": Object {
            "author": Object {
              "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
              "did": "user(0)",
              "displayName": "ali",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "followedBy": "record(2)",
                "following": "record(1)",
                "muted": true,
              },
            },
            "cid": "cids(4)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(2)",
                  "uri": "record(6)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "thanks bob",
            },
            "replyCount": 0,
            "repostCount": 1,
            "uri": "record(7)",
            "viewer": Object {
              "repost": "record(8)",
            },
          },
          "replies": Array [],
        },
      ],
    },
  ],
}
`;
